• Fix text alignment justify in job and tender post. ( Koor Web )

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -2280,7 +2280,9 @@ span.count {
     background: #fff;
     visibility: hidden;
     opacity: 0;
-    transition: visibility 1s, opacity 0.5s linear;
+    transition:
+      visibility 1s,
+      opacity 0.5s linear;
     display: block;
   }
 
